18. CSS Float and Clear problem with collapsingmarings not fixed

--- a/Web Development/HTML - Personal Site/css/styles.css
+++ b/Web Development/HTML - Personal Site/css/styles.css
@@ -8,21 +8,31 @@ h1 {
   margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
   font-size: 5.625rem;
+  color: #66BFBF;
+  line-height: 2;
 }
 
 h2 {
   font-family: 'Montserat', sans-serif;
   font-size: 2.5rem;
+  color: #66BFBF;
+  font-weight: normal;
+  line-height: 2;
 }
 
 h3 {
   font-family: 'Sacramento', sans-serif;
+  color: #11999E;
 }
 
 .top-container {
   position: relative;
   background-color: #E4F9F5;
   padding-top: 100px;
+}
+
+a {
+  color: #11999E;
 }
 
 .middle-container {}
@@ -39,4 +49,23 @@ h3 {
   position: absolute;
   left: 300px;
   bottom: 300px;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.code-img {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.chilli-img {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
 }
